--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <description>DormitoryAssistant</description>
     <modules>
         <module>member</module>
+        <module>commom</module>
     </modules>
     <properties>
         <java.version>17</java.version>
