增加网关模块，gateway

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>member</module>
         <module>commom</module>
+        <module>Gateway</module>
     </modules>
     <properties>
         <java.version>17</java.version>
