--- a/member/src/main/resources/application.properties
+++ b/member/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 server.port=8001
 ## 路由转发
 server.servlet.context-path=/member
+
+## 数据库连接
+spring.datasource.url=jdbc:mysql://rm-bp17b22410ct7b7n8go.mysql.rds.aliyuncs.com/assistant_member?characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+spring.datasource.username=assistant_member
+spring.datasource.password=990873929Ch
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+## mybatis xml路径
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
+logging.level.com.chen.assistant.member.mapper=trace
