--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>member</module>
         <module>commom</module>
         <module>Gateway</module>
+        <module>generator</module>
     </modules>
     <properties>
         <java.version>17</java.version>
