--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>commom</module>
         <module>Gateway</module>
         <module>generator</module>
+        <module>business</module>
     </modules>
     <properties>
         <java.version>17</java.version>
