房间床位数据增删改查

--- a/pom.xml
+++ b/pom.xml
@@ -66,5 +66,15 @@
         </dependencies>
     </dependencyManagement>
 
+    <build>
+        <finalName>/dist/${artifactId}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
