--- a/member/pom.xml
+++ b/member/pom.xml
@@ -36,6 +36,7 @@
     </dependencies>
 
     <build>
+        <finalName>/dist/${artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
