--- a/Gateway/src/main/resources/application.properties
+++ b/Gateway/src/main/resources/application.properties
@@ -10,6 +10,11 @@ spring.cloud.gateway.routes[1].id=business
 spring.cloud.gateway.routes[1].uri=http://localhost:8002
 spring.cloud.gateway.routes[1].predicates[0].=Path=/business/**
 
+## 路由转发,business/..的请求转发到business模块
+spring.cloud.gateway.routes[2].id=batch
+spring.cloud.gateway.routes[2].uri=http://localhost:8003
+spring.cloud.gateway.routes[2].predicates[0].=Path=/batch/**
+
 ### 路由转发,将member/..的请求转发到member模块
 #spring.cloud.gateway.routes[0].id=member
 #spring.cloud.gateway.routes[0].uri=http://127.0.0.1:8001
