--- a/business/src/main/resources/application.properties
+++ b/business/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## mybatis xml路径
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
-logging.level.com.chen.assistant.member.mapper=trace
+logging.level.com.chen.assistant.business.mapper=trace
