每日宿舍选择功能前后端实现，设置switch按钮，批量关闭按钮

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
         <module>generator</module>
         <module>business</module>
         <module>batch</module>
+        <module>Test</module>
+        <module>Test</module>
+        <module>Test</module>
     </modules>
     <properties>
         <java.version>17</java.version>
