为business,gateway,member,batch分别配置nacos

--- a/batch/src/main/resources/bootstrap.properties
+++ b/batch/src/main/resources/bootstrap.properties
@@ -1,7 +1,7 @@
 # 注册中心的名字
-spring.application.name=member
+spring.application.name=batch
 
-## 启动环境，nacos会根据环境读不同的配置dataId：member-dev.properties
+## 启动环境，nacos会根据环境读不同的配置dataId：batch-dev.properties
 spring.profiles.active=dev
 
 ## nacos server地址
