--- a/Gateway/src/main/resources/application.properties
+++ b/Gateway/src/main/resources/application.properties
@@ -2,17 +2,17 @@ server.port=8000
 
 ## 路由转发,将member/..的请求转发到member模块
 spring.cloud.gateway.routes[0].id=member
-spring.cloud.gateway.routes[0].uri=http://localhost:8001
+spring.cloud.gateway.routes[0].uri=lb://member
 spring.cloud.gateway.routes[0].predicates[0].=Path=/member/**
 
 ## 路由转发,business/..的请求转发到business模块
 spring.cloud.gateway.routes[1].id=business
-spring.cloud.gateway.routes[1].uri=http://localhost:8002
+spring.cloud.gateway.routes[1].uri=lb://business
 spring.cloud.gateway.routes[1].predicates[0].=Path=/business/**
 
 ## 路由转发,business/..的请求转发到business模块
 spring.cloud.gateway.routes[2].id=batch
-spring.cloud.gateway.routes[2].uri=http://localhost:8003
+spring.cloud.gateway.routes[2].uri=lb://batch
 spring.cloud.gateway.routes[2].predicates[0].=Path=/batch/**
 
 ### 路由转发,将member/..的请求转发到member模块
