--- a/business/src/main/resources/bootstrap.properties
+++ b/business/src/main/resources/bootstrap.properties
@@ -1,7 +1,7 @@
 # 注册中心的名字
-spring.application.name=member
+spring.application.name=business
 
-## 启动环境，nacos会根据环境读不同的配置dataId：member-dev.properties
+## 启动环境，nacos会根据环境读不同的配置dataId：business-dev.properties
 spring.profiles.active=dev
 
 ## nacos server地址
