初步版本发布上线

--- a/commom/pom.xml
+++ b/commom/pom.xml
@@ -71,7 +71,7 @@
         </dependency>
     </dependencies>
 
-    <build>
+    <!--<build>
         <finalName>/dist/${artifactId}</finalName>
         <plugins>
             <plugin>
@@ -79,6 +79,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
 
 </project>
