--- a/business/src/main/resources/application.properties
+++ b/business/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ## mybatis xml路径
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 logging.level.com.chen.assistant.business.mapper=trace
+
+# 配置为statement，即关闭一级缓存
+mybatis.configuration.local-cache-scope=statement
+
+spring.data.redis.host=121.41.129.107
+spring.data.redis.port=6379
+spring.data.redis.password=123456
