--- a/business/src/main/resources/application.properties
+++ b/business/src/main/resources/application.properties
@@ -17,4 +17,10 @@ mybatis.configuration.local-cache-scope=statement
 
 spring.data.redis.host=121.41.129.107
 spring.data.redis.port=6379
-spring.data.redis.password=123456
+spring.data.redis.password=ll123456789.
+
+spring.cache.type=redis
+spring.cache.redis.use-key-prefix=true
+spring.cache.redis.key-prefix=assistant_cache_
+spring.cache.redis.cache-null-values=true
+spring.cache.redis.time-to-live=60s
